--- a/templates/projects.html
+++ b/templates/projects.html
@@ -30,7 +30,7 @@ h1 {
   padding: 10px;
   background-color: #F3F3F3;
   border-radius: 5px;
-  min-height: 40vh;
+  max-width: 530px; /* so individual cards don't stretch across whole page */
 }
   .lifecycle .stage h3 {
     color: black;
@@ -46,7 +46,8 @@ h1 {
     background-color: white;
     padding: 10px;
     margin-bottom: 15px;
-    border-radius: 5px;
+    border-radius: 3px;
+    border-bottom: 1px solid rgb(204, 204, 204);
   }
     .project-image {
       width: 30px;
