remove top margin on question-history-context that was sized for the old breadcrumbs that were removed in 30048a5000a1f531ce50f96f7d1ee439d994db52

--- a/templates/question.html
+++ b/templates/question.html
@@ -15,6 +15,11 @@ Next Question: {{q.spec.title}} | {{task.title}}
 {{block.super}}
 
 <style>
+#focus-area-wrapper {
+  /* on mobile, space between columns */
+  margin-bottom: 30px;
+}
+
 h1 {
   margin: 4px 0 18px 0;
   font-size: 22px;
@@ -481,7 +486,7 @@ label:hover .onhover { display: inline; }
   </div> <!-- /col -->
 
   <div class="col-md-3">
-    <div id="question-history-context" style="border:0px solid black; max-height:600px; overflow-y:scroll; padding:4px; margin-top:110px;">
+    <div id="question-history-context" style="border:0px solid black; max-height:600px; overflow-y:scroll; padding:4px;">
         <ul>
         {% if context %}
           <p>Progress:</p>
