--- a/templates/task-base.html
+++ b/templates/task-base.html
@@ -72,7 +72,7 @@
 {% if task.editor == request.user %}
 
     {% for inv in open_invitations %}
-      <div data-invitation-id="{{inv.id}}" class="panel panel-warning" style="margin-top: 30px">
+      <div data-invitation-id="{{inv.id}}" class="panel panel-warning" style="margin-bottom: 1em">
         <div class="panel-body">
           You invited {{inv.to_display}} {{inv.purpose}} on {{inv.created|date}}.
           (<a href="#" onclick="return cancel_invitation(this);">cancel</a>)
@@ -83,7 +83,7 @@
 
 {% elif is_discussion_guest %}
 
-<div class="text-danger small" style="margin-top: 30px">
+<div class="text-danger small" style="margin-bottom: 1em">
     You are participating in the discussion on this question as a guest.
 </div>
 
