Polish column and "card" UI styling
Make the column and "card" styling consistent across main pages.
Add box styling to columns for more visual delination.

Re-style context-bar to match focus-area background and
put context-bar on main pages.
Darken color of breadcrumbs text.

Move projects action buttons into context-bar.
Shrink page title on projects and add home icon.
Rename "Your Compliance Projects" title to "Assessments" as experiment.
Shrink width of module area displays on projects rows layout.
Add column styling to rows layout on project page for consistency.
Add back in "Finished" button, unable to display "In Progress" and "Start" buttons still.

Apply "card" styling to app-store.
Re-style app blocks in app-store to match "card" styling,
shift app-icon to right side of app block.
Remove vendor name from app block.
Re-style app-store top of page category links.
Move app-store search box to into context-bar.
Add home icon to app-store breadcrumbs.

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,16 +35,15 @@
             }
 
             #context-bar {
-               background-color: rgb(242,242,242);
+               background-color: rgb(247,247,247);
                padding: 14px 0 10px 0;
-               border: 1px solid rgb(207,207,207);
             }
               #context-bar .breadcrumb {
                 margin: 0; padding: 0; background: none;
                 cursor: default;
               }
               #context-bar .breadcrumb a {
-                color: #777;
+                color: black;
               }
             .glyphicon-globe { color: #888; }
             h1, h2 {
@@ -255,7 +254,7 @@
     {% endif %}
 
     {% block body-wide %}
-    <div class="container-fluid" style="min-height: 400px; margin-top: 2em;">
+    <div class="container-fluid" style="min-height: 70vh;">
       {% block body %}
       {% endblock %}
 
