--- a/templates/projects.html
+++ b/templates/projects.html
@@ -11,13 +11,13 @@ Your Compliance Projects
 
 {% block head %}
 <style>
-h1 {
-  margin: 15px 0 30px 0;
+body {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .btn .glyphicon { margin-right: 6px; }
 .btn.btn-success .glyphicon { color: #FFF; }
-
 
 .lifecycle {
   margin-bottom: 30px;
@@ -28,9 +28,10 @@ h1 {
 .lifecycle .stage {
   margin: 0 -10px;
   padding: 10px;
-  background-color: #F3F3F3;
+  background-color: rgb(247,247,247);
   border-radius: 5px;
   max-width: 530px; /* so individual cards don't stretch across whole page */
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, .1), 0 2px 3px rgba(0, 0, 0, .2);
 }
   .lifecycle .stage h3 {
     color: black;
@@ -60,11 +61,30 @@ h1 {
       margin: 0;
       font-weight: bold;
     }
+
+  #context-bar {
+    background-color: white !important;
+  }
 </style>
 {% endblock %}
 
 <!-- Remove contextbar from top of page -->
-{% block contextbar %}{% endblock %}
+{% block contextbar %}
+    <div id="context-bar">
+    <div class="container-fluid">
+
+      <div style="float: right; margin: 0 0.5em 0em 5em;">
+        <a id="new-system" href="/store?protocol=govready.com/apps/compliance/2018/information-technology-system" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> Add system </a>
+        <a id="new-project" href="/store" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> Add other app </a>
+        {% if is_lonely_admin %}
+        <a href="#" onclick="show_invite_to_org(); return false;" class="btn btn-success"><i class="glyphicon glyphicon-send"></i> Invite colleague </a>
+        {% endif %}
+      </div>
+
+      <div><span class="glyphicon glyphicon-home" style="margin-right: .25em"></span> Assessments</div>
+    </div><!-- container -->
+    </div><!-- div wrapper -->
+{% endblock %}
 
 {% block body %}
 {% comment %}
@@ -73,16 +93,6 @@ h1 {
   <p>Fill out your <a href="{{request.organization.get_organization_project.get_absolute_url}}">your organization&rsquo;s profile</a>.</p>
 {% endif %}
 {% endcomment %}
-
-<div style="float: right; margin: 0 0 1em 5em;">
-  <a id="new-system" href="/store?protocol=govready.com/apps/compliance/2018/information-technology-system" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> Add system </a>
-  <a id="new-project" href="/store" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> Add other app </a>
-  {% if is_lonely_admin %}
-  <a href="#" onclick="show_invite_to_org(); return false;" class="btn btn-success"><i class="glyphicon glyphicon-send"></i> Invite colleague </a>
-  {% endif %}
-</div>
-
-<h1>Your Compliance Projects</h1>
 
 {% for lifecycle in lifecycles %}
   <div class="clearfix"></div>
