Further tweaks to the polish

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,8 @@
         <style>
             body {
                 padding-top: 50px !important; /* the !important is to fix a bug with the dashboard integration, remove it eventually */
+                padding-left: 20px;
+                padding-right: 20px;
                 padding-bottom: 20px;
                 overflow-y: scroll;
                 font-family: 'Hind', sans-serif;
