Various UI CSS improvements to support background colors, images
Put a semi-transparent wrapper around breadcrumbs and next question list.
Put action-buttons in bootstrap button group.
Put a semi-transparent wrapper around footer content. Remove logo
and horizontal rule from footer.

--- a/templates/focus-area-styles.css
+++ b/templates/focus-area-styles.css
@@ -1,5 +1,9 @@
 body {
     background-color: rgb(247,247,247);
+    background-size: cover;
+    background-position: center;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 #focus-area-wrapper {
