--- a/templates/project-base.html
+++ b/templates/project-base.html
@@ -30,11 +30,11 @@ div.subtitle {
 }
 
 @media screen and (min-width: 992px) {
-  #action-buttons button, #action-buttons a {
+  /*#action-buttons button, #action-buttons a {
     display: block;
     width: 100%;
     margin-bottom: 15px;
-  }
+  }*/
 }
 </style>
 {% endblock %}
