--- a/templates/task-base.html
+++ b/templates/task-base.html
@@ -7,11 +7,16 @@
 {% include "focus-area-styles.css" %}
 #question-history-context {
   font-size: 0.85em;
+  background-color: rgba(255,255,255,0.2);
+  padding: 8px;
+  max-width: 40vw;
+  border-radius: 10px;
+  border-bottom: 1px solid rgb(204, 204, 204);
 }
   #question-history-context ul {
     list-style-type: none;
     padding: 0;
-    color: #888;
+    color: #666;
     line-height: 128%;
   }
   #question-history-context ul li {
