remove dead css

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,13 +37,12 @@
             }
 
             #context-bar {
-               /*background-color: rgb(247,247,247);*/
                padding: 14px 0 8px 0;
                margin-bottom: 8px;
             }
               #context-bar .breadcrumb {
-                margin: 0; padding: 0;
-                /*background: none;*/
+                margin: 0;
+                padding: 0;
                 background-color: rgba(255,255,255,0.2);
                 padding: 8px;
                 max-width: 40vw;
