--- a/templates/base.html
+++ b/templates/base.html
@@ -350,6 +350,10 @@
         $(document).ajaxSend(function(event, xhr, settings) { if (!/^https?:.*/.test(settings.url)) xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"); });
         </script>
 
+        {% if MOUSE_CURSOR_FOLLOWER %}
+        <script>enableMouseCursorFollower();</script>
+        {% endif %}
+
         {% block scripts %}
         {% endblock %}
     </body>
