--- a/templates/projects.html
+++ b/templates/projects.html
@@ -52,9 +52,14 @@ Your Compliance Projects
     }
     .project-text {
     }
-    .project h4 {
+    .project-text h4 {
       margin: 0;
       font-weight: bold;
+      font-size: inherit;
+    }
+    .project-text > * {
+      margin: .5em 0 0 0;
+      font-size: 13px;
     }
 
   h1.mini {
@@ -131,18 +136,26 @@ Your Compliance Projects
 
                   {# what kind of project is this #}
                   {% if project.root_task.module.title != project.title %}
-                    <p class="small" style="margin-top: .5em">
+                    <p>
                       {{project.root_task.module.title}}
                     </p>
                   {% endif %}
 
                   {% with snippet=project.render_snippet %}
                     {% if snippet %}
-                      <div class="small" style="margin-top: .5em">
+                      <div>
                         {{project.render_snippet|safe}}
                       </div>
                     {% endif %}
                   {% endwith %}
+
+                  <div>
+                    <span
+                      class="glyphicon glyphicon-info-sign"
+                      style="color: #995; cursor: pointer;"
+                      data-toggle="popover" title="{{project.root_task.module.spec.title}}" data-content="App version: {{project.root_task.module.spec.catalog.version|force_escape}}<br>Started: {{project.created|date}}<br> Updated: {{project.root_task.updated|date}}"
+                    ></span>
+                  </div>
                 </div>
 
                 <div class="clearfix"></div>
@@ -159,6 +172,13 @@ Your Compliance Projects
 
 {% block scripts %}
 <script>
+$(function() {
+  // activate popovers
+  $('.project-text *[data-toggle=popover]').popover({
+    html: true
+  });
+})
+
 {% if is_lonely_admin %}
 function show_invite_to_org() {
   show_invite_modal(
