batch-fetch user settings for discussion @-mentionable users
Getting the @-mentionable users in a Discussion (for autocomplete and then scanning the comment body for mentioned users)
requires getting profile information from the users. Doing it user by user was slow even for a small number of users.
This commit creates two major new methods for batch loading user settings:

* Task.get_all_current_answer_records batch loads the current answers for one or more Tasks
* User.localize_users_to_org batch loads the account settings Tasks and their answers for one or more Users

--- a/templates/base.html
+++ b/templates/base.html
@@ -189,9 +189,7 @@
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
-                {% if user.user_settings_task %}
-                  <li><a href="{{user.user_settings_task.get_absolute_url}}" id="user-menu-account-settings">Account Settings</a></li>
-                {% endif %}
+                <li><a href="{{user.user_settings_task_create_if_doesnt_exist.get_absolute_url}}" id="user-menu-account-settings">Account Settings</a></li>
                 <li><a href="/api-keys">Your API Keys</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="{% url "account_logout" %}">Log Out</a></li>
